cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Werror -O0")
project (main)
find_package(Qt6 REQUIRED COMPONENTS DBus)
qt_standard_project_setup()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(SRCS "main.cpp")
qt_add_executable(${PROJECT_NAME} ${SRCS})
target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::DBus)
